--- a/mystyle.css
+++ b/mystyle.css
@@ -493,11 +493,11 @@ img.floatright {
     float: right;
 }
 
-img floatleft{
+img.floatleft{
     float: left;
 }
 
-img floatnone{
+img.floatnone{
     float: none;
 }
 
@@ -551,7 +551,7 @@ img floatnone{
 }
 
 
-.img-container {
+.img_container {
     float: left;
     width: 33.33%;
     height:300px;
@@ -622,4 +622,363 @@ span.c {
     padding: 20px;
 }
 
+.centermarginauto {
+    /*Center aligning has no effect if the width 
+    property is not set (or set to 100%).*/
+    margin: auto;
+    width: 60%;
+    border: 3px solid #73AD21;
+    padding: 10px;
+}  
+
+.centertext_align_center {
+    text-align: center;
+    border: 3px solid green;
+}
+
+.image_block_margin_leftright_auto{
+    border:5px solid red ;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    width:30%;
+}
+
+.right_align_absolute{
+    position: absolute;
+    right: 0px;
+    width: 300px;
+    border: 3px solid #73AD21;
+    padding: 10px;
+}
+
+.right_float_align{/*If an element is taller than the element containing it, 
+    and it is floated, it will overflow outside of its container.
+    You can use the "clearfix" hack to fix this (see example below).
+    overflow:auto;*/
+    float: right;
+    width: 300px;
+    border: 3px solid #73AD21;
+    padding: 10px;
+}
+
+.padding_and_textalignTocenter{
+    padding: 70px 0;
+    border: 3px solid green;
+    text-align: center;
+}
+
+.center_uselineheight{
+    line-height: 200px;
+    height: 200px;
+    border: 3px solid red;
+    text-align: center;
+}
+
+.center_uselineheight p{
+    line-height: 1.5;
+    display: inline-block;
+    vertical-align: middle;
+}
+
+.center_useposition_transform{ 
+    height: 200px;
+    position: relative;
+    border: 3px solid green; 
+}
+
+.center_useposition_transform p {
+    margin: 0;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    /*translaste(x,y) 從原來位置移動x和y*/
+    -ms-transform: translate(-50%, -50%);
+    transform: translate(-50%, -50%);
+}
+
+.Descendantselect p {/*("space"),在class中的p都算,
+    不一定要第一代直系(沒有被其他element包在裡面)*/
+    background-color: yellow;
+}
+
+.ChildSelect > p { /*(">")在class中且一定要第一代直系才算*/ 
+    background-color: yellow;
+}
+
+.AdjacentSiblingSelect + p {/*("+"),在class外的第一個直系*/
+    background-color: yellow;
+}
+
+
+/*
+.GeneralSibingSelect ~ p {/*("~"),在class外所有第一個直系
+    background-color: yellow;
+}*/
+
+
+/*pseudo code*/
+
+
+/* unvisited link */
+a.anchor:link {
+    color: red;
+}
+
+/* visited link */
+a.anchor:visited {
+    color: green;
+}
+
+/* mouse over link */
+a.anchor:hover { /*上面必須先定義:link or :visited */
+    color: hotpink;
+}
+
+/* selected link */
+a.anchor:active { /*上面必須先定義:hover*/
+    color: blue;
+}
+
+.divhover {
+    background-color: green;
+    color: white;
+    padding: 25px;
+    text-align: center;
+}
+.divhover:hover {
+    background-color: blue;
+}
+
+.hoverTochange_p p { /*先隱藏起來*/
+    display: none;
+    background-color: yellow;
+    padding: 20px;
+}
+
+.hoverTochange_p:hover p { /*hover再出來 */
+    display: block;
+}
+
+p.elementfirst-child_is_p:first-child {/* body p:first-child(在body之下第個小孩是p的話)
+    he selector matches any <p> element that is the first child of any element:
+    所有element下第一個小孩是 p 元素的就...*/
+    color: blue;
+}
+
+p.pelementfirst-child_is_i i:first-child { 
+    /* the selector matches the first <i> element in all <p> elements:
+    所有p element下的 第一個是i element 就...*/
+    color: blue;
+} 
+
+p.All_Ielement_under_p:first-child i {
+    /* 在第一個p element之下的所有 i element就...*/
+    color: blue;
+} 
+
+
+q:lang(no) { /*:lang pseudo-class allows you to define special rules for different languages.
+    給新的定義*/
+    quotes: "~" "~";
+}
+
+input.Pseudo_class_focus:focus  { /*clicked or actived*/
+    background-color:lightblue;
+   }
+
+p.Pseudo_elementfirst_line::first-line {
+    color: #ff0000;
+    font-variant: small-caps;
+    /*::first-line pseudo-element can only be applied to block-level elements.*/
+}
+
+p.Pseudo_elementfirst_letter::first-letter {
+    color: #ff0000;
+    font-size: xx-large;
+    /* can only be applied to block-level elements.*/
+}
+
+h1.Pseudo_element_before::before {
+    content: url(saber.png);
+}
+
+h1.Pseudo_element_after::after {
+    content: url(saber.png);
+}
+
+::-moz-selection { /* Code for Firefox */
+    color: red;
+    background: yellow;
+}
+
+::selection { /*selected by userd*/
+    color: red;
+    background-color: yellow;
+}
+/*Pseudo_element////////////////////////////////////////////////////*/
+/*opacity////////////////////////////////////////////////////*/
+
+img.opacity {
+    opacity: 0.5;
+    filter: alpha(opacity=50); /* For IE8 and earlier */
+}
+img.opacity:hover {
+    opacity: 1.0;
+    filter: alpha(opacity=100); /* For IE8 and earlier */
+}
+
+div {
+    background-color: #4CAF50;
+    padding: 10px;
+}
+
+div.first {
+    opacity: 0.1;
+    filter: alpha(opacity=10); /* For IE8 and earlier */
+}
+
+div.second {
+    opacity: 0.3;
+    filter: alpha(opacity=30); /* For IE8 and earlier */
+}
+
+div.third {
+    opacity: 0.6;
+    filter: alpha(opacity=60); /* For IE8 and earlier */
+}
+
+div.rgba {
+    background: rgb(76, 175, 80);
+    padding: 10px;
+}
+
+div.rgbafirst {
+    background: rgba(76, 175, 80, 0.1);
+}
+
+div.rgbasecond {
+    background: rgba(76, 175, 80, 0.3);
+}
+
+div.rgbathird {
+    background: rgba(76, 175, 80, 0.6);
+}
+
+div.background {
+    background: url(saber.png) repeat;
+    border: 2px solid black;
+  }
   
+  div.transbox {
+    margin: 30px;
+    background-color: #ffffff;
+    border: 1px solid black;
+    opacity: 0.6;
+    filter: alpha(opacity=60); /* For IE8 and earlier */
+  }
+  
+  div.transbox p {
+    margin: 5%;
+    font-weight: bold;
+    color: #000000;
+  }
+
+
+
+  /*  Attribute Selectors/////////////////////////////////////////////////;*/
+a[target] {
+    background-color: yellow;/*attribue 是target的*/
+}
+a[target=_blank] {
+    background-color: yellow;/*attribue 是target =_blank 的*/
+}
+[title~=flower] { /*attribue 是title =~flower  有red就可以的(但是red要獨立出來)*/
+    border: 5px solid yellow;
+}
+
+[class|=top] {/*attribue class(不一定要是class) = top or top-的*/
+    background: yellow;
+}
+
+[class^="top"] {/*attribue class 開頭是 top 就可以*/
+    background: yellow;
+}
+[class$="test"] {/*結尾是 test 就可以*/
+    background: yellow;
+}
+[class*="te"] {/*中間有 te 就可以*/
+    background: yellow;
+}
+input[type="text"] {
+    width: 150px;
+    display: block;
+    margin-bottom: 10px;
+    background-color: yellow;
+}
+
+input[type="button"] {
+    width: 120px;
+    margin-left: 35px;
+    display: block;
+}
+
+/*  Attribute Selectors/////////////////////////////////////////////////;*/
+
+
+input[type=text] {
+    width: 130px;
+    box-sizing: border-box;
+    border: 2px solid #ccc;
+    border-radius: 4px;
+    font-size: 16px;
+    background-color: white;
+    background-image: url('searchicon.png');
+    background-position: 10px 10px; 
+    background-repeat: no-repeat;
+    padding: 12px 20px 12px 40px;
+    -webkit-transition: width 0.4s ease-in-out;
+    transition: width 0.4s ease-in-out;
+
+}/*伸縮特效*/
+
+input[type=text]:focus {
+    width: 100%;
+}
+select { /*配option用*/
+    width: 100%;
+    padding: 16px 20px;
+    border: none;
+    border-radius: 4px;
+    background-color: #f1f1f1;
+}
+
+
+
+
+  /*  Grid/////////////////////////////////////////////////;*/
+.item1 { grid-area: header; }
+.item2 { grid-area: menu; }
+.item3 { grid-area: main; }
+.item4 { grid-area: right; }
+.item5 { grid-area: footer; }
+
+.grid-container {
+  display: grid;
+  grid-template-areas:
+    'header header header header header header'
+    'menu main main main right right'
+    'menu footer footer footer footer footer';
+  grid-gap: 10px;
+  background-color: #2196F3;
+  padding: 10px;
+}
+.grid-container > div {
+  background-color: rgba(255, 255, 255, 0.8);
+  text-align: center;
+  padding: 20px 0;
+  font-size: 30px;
+}
+
+
+
